# poc-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs  startup.rs
src/routes/: cache_ops.rs  health_check.rs  mod.rs
src/routes/home/: home.html
