[package]
name = "poc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path="src/main.rs"
name="poc-rust"

[dependencies]
actix-web = "4.0.1"
tokio = {version = "1.18.2",features = ["macros", "rt-multi-thread"]}
serde = {version="1.0.137", features = ["derive"]}
lru = "0.7.8"
env_logger = "0.9.0"
log = "0.4.17"
